# Python-Real-World-Projects

./: README.md
project_0/: README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  tox.ini
project_0/docs/: conf.py
project_0/docs/_build/doctrees/: api.doctree  design.doctree  environment.pickle  index.doctree  overview.doctree
project_0/docs/_build/html/: .buildinfo  api.html  design.html  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
project_0/docs/_build/html/_sources/: api.rst.txt  design.rst.txt  index.rst.txt  overview.rst.txt
project_0/src/: hello_world.py  hw.py  hw2.py
project_0/src/project_0.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project_0/tests/: environment.py  test_hello_world.py  test_hw.py  test_hw2.py
project_0/tests/features/: hello_world.feature
project_0/tests/steps/: hw_cli.py
project_1_1/: pyproject.toml  requirements.txt  tox.ini
project_1_1/src/: acquire.py  csv_extract.py  model.py
project_1_1/src/project_1_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project_1_1/tests/: environment.py  test_model.py
project_1_1/tests/features/: acquire.feature
project_1_1/tests/steps/: fake_cli_steps.py
project_1_2/: pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
project_1_2/src/: acquire.py  kaggle_client.py  model.py  webpage_client.py
project_1_2/src/project_1_2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project_1_2/tests/: environment.py  mock_kaggle_bottle.py  mock_kaggle_server.py  test_kaggle_client.py
project_1_2/tests/features/: dataset_download.feature
project_1_2/tests/steps/: cli_interface.py
project_1_3/: pyproject.toml  requirements.txt  tox.ini
project_1_3/src/: acquire.py  html_extract.py
project_1_3/src/project_1_3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project_1_3/tests/: environment.py  test_html_extract.py
project_1_3/tests/features/: html_extract.feature
project_1_3/tests/steps/: cli_interface.py
project_1_4/: pyproject.toml  requirements.txt  schema.toml  tox.ini
project_1_4/src/: build_db.py  query_examples.py  sql_script_maker.py
project_1_4/src/project_1_4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project_1_4/tests/: test_build_db.py
project_1_5/: example.db  pyproject.toml  requirements.txt  schema.toml  tox.ini
project_1_5/src/: acquire.py  db_extract.py  model.py
project_1_5/src/project_1_5.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
project_1_5/tests/: environment.py  test_db_extract.py
project_1_5/tests/features/: db_extract.feature
project_1_5/tests/steps/: db_interface.py
