# Python Real-World Projects
# Project 1.2: Acquire data from web service

[build-system]
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[project]
name = "project_1_2"
version = "1.0.0"
authors = [
    {name = "Author", email = "author@email.com"},
]
description = "Real-World Python Projects -- Project 1.2."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    # Packages this project requires
    "requests==2.28.1",
    "beautifulsoup4==4.11.1"
]
[project.optional-dependencies]
dev = [
    # Development tools to work on this project
    "sphinx==7.2.2",
    "sphinxcontrib-plantuml==0.25",
    "pip-tools==7.3.0"
]
test = [
    # Testing tools to test this project
    "pytest==7.4.0",
    "tox==4.9.0",
    "behave==1.2.6",
    "bottle==0.12.23"
]
